; ModuleID = '/home/carl/AnghaBench/freebsd/bin/pax/extr_ar_io.c_ar_set_wr.c'
source_filename = "/home/carl/AnghaBench/freebsd/bin/pax/extr_ar_io.c_ar_set_wr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@wr_trail = common dso_local global i64 0, align 8
@artyp = common dso_local global i64 0, align 8
@ISREG = common dso_local global i64 0, align 8
@arfd = common dso_local global i32 0, align 4
@SEEK_CUR = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [32 x i8] c"Unable to truncate archive file\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ar_set_wr() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  store i64 0, i64* @wr_trail, align 8
  %3 = load i64, i64* @artyp, align 8
  %4 = load i64, i64* @ISREG, align 8
  %5 = icmp ne i64 %3, %4
  br i1 %5, label %6, label %7

6:                                                ; preds = %0
  store i32 0, i32* %1, align 4
  br label %21

7:                                                ; preds = %0
  %8 = load i32, i32* @arfd, align 4
  %9 = load i32, i32* @SEEK_CUR, align 4
  %10 = call i32 @lseek(i32 %8, i32 0, i32 %9)
  store i32 %10, i32* %2, align 4
  %11 = icmp slt i32 %10, 0
  br i1 %11, label %17, label %12

12:                                               ; preds = %7
  %13 = load i32, i32* @arfd, align 4
  %14 = load i32, i32* %2, align 4
  %15 = call i64 @ftruncate(i32 %13, i32 %14)
  %16 = icmp slt i64 %15, 0
  br i1 %16, label %17, label %20

17:                                               ; preds = %12, %7
  %18 = load i32, i32* @errno, align 4
  %19 = call i32 @syswarn(i32 1, i32 %18, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0))
  store i32 -1, i32* %1, align 4
  br label %21

20:                                               ; preds = %12
  store i32 0, i32* %1, align 4
  br label %21

21:                                               ; preds = %20, %17, %6
  %22 = load i32, i32* %1, align 4
  ret i32 %22
}

declare dso_local i32 @lseek(i32, i32, i32) #1

declare dso_local i64 @ftruncate(i32, i32) #1

declare dso_local i32 @syswarn(i32, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
